Support DMC, BCC and GCC

--- a/make/msw/win32/bcc/makefile.ini
+++ b/make/msw/win32/bcc/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 6.0 Compiler (definitions).
+#     - Borland C++ compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,15 +20,15 @@ OBJ_SFX := obj
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := cl
+CC := bcc32
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -nologo -GF
+CFLAGS := -q -d
 
 # Output name flag.
-CC_OUT := -Fo
+CC_OUT := -o
 # Compile-only flag.
 CC_COMPILE_ONLY := -c
 # Macro definition flag.
@@ -37,18 +37,11 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -GZ
-CFLAGS_RELEASE := -W3 -O2
-CFLAGS_LIB_DEBUG := -MLd
-CFLAGS_LIB_RELEASE := -ML
-CFLAGS_LIBMT_DEBUG := -MTd
-CFLAGS_LIBMT_RELEASE := -MT
-CFLAGS_DLL_DEBUG := -MDd
-CFLAGS_DLL_RELEASE := -MD
-
-# Special options, which are expanded at-the-place.
-CFLAGS_VCDB_NAME := vc60
-CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
+CFLAGS_DEBUG := -w -Od -v
+CFLAGS_RELEASE := -w- -O2
+CFLAGS_LIB := -WC
+CFLAGS_LIBMT := -WM
+CFLAGS_DLL := -WD
 
 
 # C++ compiler settings.
@@ -59,7 +52,7 @@ CXX := $(CC)
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -EHsc -GR
+CXXFLAGS := $(CFLAGS) -x -xd -RT
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -73,38 +66,32 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
-CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
-CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
-CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
-CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
-CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
-
-# Special options, which are expanded at-the-place.
-CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
+CXXFLAGS_LIB := $(CFLAGS_LIB)
+CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
+CXXFLAGS_DLL := $(CFLAGS_DLL)
 
 
 # Resource compiler settings.
 
 # The compiler executable.
-RC := rc
+# RC := brcc32
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-RES_SFX := res
+# RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := /n /r
+RCFLAGS := -32
 
 # Output name flag.
-RC_OUT := /fo
+RC_OUT := -fo
 
 # Macro definition flag.
-RC_DEFINE := /d
+RC_DEFINE := -d
 # Include directory flag.
-RC_INCLUDE := /i
+RC_INCLUDE := -i
 
 
 ##########################
@@ -114,7 +101,7 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /nologo /machine:I386 /subsystem:console
+LDFLAGS := -q
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -124,19 +111,19 @@ LIB_SFX := lib
 # C++ linker settings.
 
 # The linker executable.
-LNKC := link
+LNKC := $(CXX)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS)
+LNKC_FLAGS := $(LDFLAGS) -WC
 
 # Output name flag.
-LNKC_OUT := /out:
+LNKC_OUT := -e
 
 # Flags for different build configurations.
-LNKC_FLAGS_DEBUG := /debug /opt:noref
-LNKC_FLAGS_RELEASE := /opt:ref
+LNKC_FLAGS_DEBUG := -v
+LNKC_FLAGS_RELEASE :=
 
 LNKC_LIB_SFX := .$(LIB_SFX)
 
@@ -144,13 +131,13 @@ LNKC_LIB_SFX := .$(LIB_SFX)
 # C++ librarian compiler settings.
 
 # The librarian executable.
-LIBC := $(LNKC)
+LIBC := tlib
 
 # The librarian global flags.
-LIBC_FLAGS := /lib /nologo
+LIBC_FLAGS := /P4096 /a
 
 # Output name flag.
-LIBC_OUT := $(LNKC_OUT)
+LIBC_OUT := 
 
 
 # C++ dynamic library linker settings.
@@ -161,7 +148,7 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := /dll $(LNKC_FLAGS)
+DLLC_FLAGS := $(LDFLAGS) -WD
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
@@ -170,16 +157,20 @@ DLLC_OUT := $(LNKC_OUT)
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
+# Tool for creating the import library from the DLL.
+DLLC_IMPLIB := implib
+DLLC_IMPLIB_OUT := 
+
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = $(1)*.sbr
-MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
-MXCPP_CLEAN_MASK_TEST = $(1)*.sbr
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.pdb $(1)*.ilk $(1)$(CFLAGS_VCDB_NAME).idb
+MXCPP_CLEAN_MASK = *.bak
+MXCPP_CLEAN_MASK_DEBUG = 
+MXCPP_CLEAN_MASK_TEST = $(1)*.tds
+MXCPP_CLEAN_MASK_TEST_DEBUG = 
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
-MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
+MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.tds)
+MXCPP_CLEANALL_MASK_DLL_DEBUG = 
 
 
 # Include parent definitions.
