--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -39,6 +39,7 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -g -o-all
 CFLAGS_RELEASE := -w -o
+CFLAGS_DLL :=
 
 
 # C++ compiler settings.
@@ -63,6 +64,7 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
+CXXFLAGS_DLL := $(CFLAGS_DLL)
 
 
 # Resource compiler settings.
@@ -95,7 +97,7 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := -L/nologo
+LDFLAGS := -L/nologo -L/nomap
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -142,7 +144,9 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LDFLAGS) -L/dll
+DLLC_FLAGS := $(LDFLAGS) -L/implib
+# -mn -WD kernel32.lib
+# -L/dll
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
@@ -151,15 +155,25 @@ DLLC_OUT := $(LNKC_OUT)
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
+# Special options, which are expanded at-the-place.
+# DLLC_FLAGS_OPTIONS = -L/map=$$(@:.dll=.map)
+
+
+# Tool for creating the import library from the DLL.
+#DLLC_IMPLIB := dmimplib /noi /p:512
+# /system
+#DLLC_IMPLIB_OUT := 
+
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = 
+MXCPP_CLEAN_MASK = *.bak
 MXCPP_CLEAN_MASK_DEBUG = 
 MXCPP_CLEAN_MASK_TEST = 
 MXCPP_CLEAN_MASK_TEST_DEBUG = 
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = 
+MXCPP_CLEANALL_MASK = *.map
+MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.map)
 MXCPP_CLEANALL_MASK_DLL_DEBUG = 
 
 
