--- a/make/msw/win32/msvc8/makefile.ini
+++ b/make/msw/win32/msvc8/makefile.ini
@@ -20,12 +20,12 @@ OBJ_SFX := obj
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := cl -nologo
+CC := cl
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -GF
+CFLAGS := -nologo -GF
 
 # Output name flag.
 CC_OUT := -Fo
