--- a/make/global.ini
+++ b/make/global.ini
@@ -18,6 +18,7 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 # Source files list.
 MXCPP_SRC_LIST =	\
+dllmain.cpp	\
 debug.cpp	\
 Memory.cpp	\
 new.cpp	\
@@ -26,6 +27,9 @@ Class.cpp	\
 Except.cpp	\
 log.cpp	\
 malloc.cpp	\
+Stream.cpp	\
+FileStrm.cpp	\
+StdStrm.cpp	\
 App/App.cpp	\
 App/TestApp.cpp	\
 System/Error.cpp	\
