--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -25,7 +25,8 @@ CC := dmc
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -mn
+CFLAGS :=
+# -mn
 
 # Output name flag.
 CC_OUT := -o
@@ -39,7 +40,7 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -g -o-all
 CFLAGS_RELEASE := -w -o
-CFLAGS_DLL :=
+CFLAGS_DLL := -WD
 
 
 # C++ compiler settings.
@@ -145,6 +146,7 @@ DLLC := $(LNKC)
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
 DLLC_FLAGS := $(LDFLAGS) -L/implib
+# -L/information
 # -mn -WD kernel32.lib
 # -L/dll
 
