Support the Watcom compiler

--- a/make/msw/win32/bcc/makefile.ini
+++ b/make/msw/win32/bcc/makefile.ini
@@ -159,6 +159,7 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
 # Tool for creating the import library from the DLL.
 DLLC_IMPLIB := implib
+DLLC_IMPLIB_FLAGS := 
 DLLC_IMPLIB_OUT := 
 
 
