--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Digital Mars Compiler (DMC) (definitions).
+#     - Digital Mars (DMC) compiler (definitions).
 #
 # @author Emil Maskovsky
 #
