--- a/make/msw/win32/gcc/makefile
+++ b/make/msw/win32/gcc/makefile
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - GNU Compiler (GCC) Compiler.
+#     - GNU C++ (GCC) compiler.
 #
 # @author Emil Maskovsky
 #
