--- a/make/msw/win32/watcom/makefile.ini
+++ b/make/msw/win32/watcom/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 7.0 compiler (definitions).
+#     - Open Watcom C++ compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,46 +20,39 @@ OBJ_SFX := obj
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := cl
+CC := wcc386
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -nologo -GF
+CFLAGS := -zq
 
 # Output name flag.
-CC_OUT := -Fo
+CC_OUT := -fo
 # Compile-only flag.
-CC_COMPILE_ONLY := -c
+CC_COMPILE_ONLY :=
 # Macro definition flag.
-CC_DEFINE := -D
+CC_DEFINE := -d
 # Include directory flag.
-CC_INCLUDE := -I
+CC_INCLUDE := -i
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -RTCcsu
-CFLAGS_RELEASE := -W3 -O2
-CFLAGS_LIB_DEBUG := -MLd
-CFLAGS_LIB_RELEASE := -ML
-CFLAGS_LIBMT_DEBUG := -MTd
-CFLAGS_LIBMT_RELEASE := -MT
-CFLAGS_DLL_DEBUG := -MDd
-CFLAGS_DLL_RELEASE := -MD
-
-# Special options, which are expanded at-the-place.
-CFLAGS_VCDB_NAME := vc70
-CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
+CFLAGS_DEBUG := -od -d2 -db -wx
+CFLAGS_RELEASE := -ox -d0 -w0
+CFLAGS_LIB := -bc
+CFLAGS_LIBMT := -bm
+CFLAGS_DLL := -bd
 
 
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := $(CC)
+CXX := wpp386
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -EHsc -GR
+CXXFLAGS := $(CFLAGS) -xs -xr
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -73,25 +66,19 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
-CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
-CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
-CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
-CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
-CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
-
-# Special options, which are expanded at-the-place.
-CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
+CXXFLAGS_LIB := $(CFLAGS_LIB)
+CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
+CXXFLAGS_DLL := $(CFLAGS_DLL)
 
 
 # Resource compiler settings.
 
 # The compiler executable.
-RC := rc
+#RC := rc
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-RES_SFX := res
+#RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
@@ -114,7 +101,7 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /nologo /machine:I386 /subsystem:console
+LDFLAGS :=
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -124,33 +111,35 @@ LIB_SFX := lib
 # C++ linker settings.
 
 # The linker executable.
-LNKC := link
+LNKC := wlink
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) user32.lib
+LNKC_FLAGS := $(LDFLAGS) system 386 option quiet
 
+LNKC_OBJ := file 
 # Output name flag.
-LNKC_OUT := /out:
+LNKC_OUT := name 
 
 # Flags for different build configurations.
-LNKC_FLAGS_DEBUG := /debug /opt:noref
-LNKC_FLAGS_RELEASE := /opt:ref
+LNKC_FLAGS_DEBUG := debug watcom all
+LNKC_FLAGS_RELEASE :=
 
-LNKC_LIB_SFX := .$(LIB_SFX)
+LNKC_LIB_PFX := library 
+LNKC_LIB_SFX :=
 
 
 # C++ librarian compiler settings.
 
 # The librarian executable.
-LIBC := $(LNKC)
+LIBC := wlib
 
 # The librarian global flags.
-LIBC_FLAGS := /lib /nologo
+LIBC_FLAGS := -q -b -n
 
 # Output name flag.
-LIBC_OUT := $(LNKC_OUT)
+LIBC_OUT :=
 
 
 # C++ dynamic library linker settings.
@@ -161,8 +150,9 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := /dll $(LNKC_FLAGS)
+DLLC_FLAGS := $(LNKC_FLAGS)
 
+DLLC_OBJ := $(LNKC_OBJ)
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
 
@@ -170,16 +160,21 @@ DLLC_OUT := $(LNKC_OUT)
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
+# Tool for creating the import library from the DLL.
+DLLC_IMPLIB := $(LIBC)
+DLLC_IMPLIB_FLAGS := $(LIBC_FLAGS)
+DLLC_IMPLIB_OUT := $(LIBC_OUT)
+
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = $(1)*.sbr
-MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
-MXCPP_CLEAN_MASK_TEST = $(1)*.sbr
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
+MXCPP_CLEAN_MASK = 
+MXCPP_CLEAN_MASK_DEBUG = $(1)*.mbr
+MXCPP_CLEAN_MASK_TEST = 
+MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.mbr
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
-MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
+MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib)
+MXCPP_CLEANALL_MASK_DLL_DEBUG = 
 
 
 # Include parent definitions.
