--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - GNU Compiler (GCC) (definitions).
+#     - GNU C++ (GCC) compiler (definitions).
 #
 # @author Emil Maskovsky
 #
