--- a/make/msw/win32/msvc6/makefile.ini
+++ b/make/msw/win32/msvc6/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 6.0 Compiler (definitions).
+#     - Microsoft Visual C++ 6.0 compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -129,7 +129,7 @@ LNKC := link
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS)
+LNKC_FLAGS := $(LDFLAGS) user32.lib
 
 # Output name flag.
 LNKC_OUT := /out:
