Update Watcom and Borland build

--- a/make/global.ini
+++ b/make/global.ini
@@ -92,6 +92,10 @@ MXCPP_LIBMT_CONSTRUCT_FULLNAME = $(LIB_PFX)$(call MXCPP_LIBMT_CONSTRUCT_NAME,$(1
 MXCPP_DLL_CONSTRUCT_FULLNAME = $(DLL_PFX)$(call MXCPP_DLL_CONSTRUCT_NAME,$(1)).$(DLL_SFX)
 
 
+MXCPP_LIBS :=	\
+$(MXCPP_LIBS_PLATFORM)
+
+
 # List of all compilers.
 #
 # Used to automatic creation of build flags.
@@ -192,7 +196,7 @@ MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,,$(3),$(4))
 # @param $(4) The libraries list.
 # @param $(5) The character configuration type.
 # @param $(6) The debuginfo configuration type.
-MXCPP_BUILD_LINK_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) )$($(1)_OUT)$$@ $(2)$(if $(strip $(4)), $(4))$(if $(strip $(3)), $(3))
+MXCPP_BUILD_LINK_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) )$(2) $($(1)_OUT)$$@ $($(1)_LIB_START)$(4) $($(1)_RES_START)$(3)
 
 # The command for building libraries.
 #
