--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -44,6 +44,10 @@ MXCPP_CFLAGS_PLATFORM :=
 MXCPP_CXXFLAGS_PLATFORM :=
 
 
+MXCPP_LIBS_PLATFORM :=	\
+$(MXCPP_LIBS_SYSTEM)
+
+
 # Include global definitions.
 include ../../../global.ini
 
