--- a/make/msw/win32/bcc/makefile.ini
+++ b/make/msw/win32/bcc/makefile.ini
@@ -37,6 +37,7 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
+CFLAGS_UNICODE := -WU
 CFLAGS_DEBUG := -w -Od -v
 CFLAGS_RELEASE := -w- -O2
 CFLAGS_LIB := -WC
@@ -64,6 +65,7 @@ CXX_DEFINE := $(CC_DEFINE)
 CXX_INCLUDE := $(CC_INCLUDE)
 
 # Flags for different build configurations.
+CXXFLAGS_UNICODE := $(CFLAGS_UNICODE)
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
 CXXFLAGS_LIB := $(CFLAGS_LIB)
@@ -74,16 +76,16 @@ CXXFLAGS_DLL := $(CFLAGS_DLL)
 # Resource compiler settings.
 
 # The compiler executable.
-# RC := brcc32
+RC := brcc32
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-# RES_SFX := res
+RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := -32
+RCFLAGS := -32 -iC:\SW\Borland\Bcc55\include
 
 # Output name flag.
 RC_OUT := -fo
@@ -101,7 +103,7 @@ RC_INCLUDE := -i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := -q
+LDFLAGS := /q /x
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -111,18 +113,20 @@ LIB_SFX := lib
 # C++ linker settings.
 
 # The linker executable.
-LNKC := $(CXX)
+LNKC := ilink32
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) -WC
+LNKC_FLAGS := $(LDFLAGS) /Tpe /ap
 
 # Output name flag.
-LNKC_OUT := -e
+LNKC_OUT := , 
+LNKC_LIB_START := ,, cw32i.lib 
+LNKC_RES_START := ,, 
 
 # Flags for different build configurations.
-LNKC_FLAGS_DEBUG := -v
+LNKC_FLAGS_DEBUG := /v /w
 LNKC_FLAGS_RELEASE :=
 
 LNKC_LIB_SFX := .$(LIB_SFX)
@@ -148,10 +152,12 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LDFLAGS) -WD
+DLLC_FLAGS := $(LDFLAGS) /Tpd
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
+DLLC_LIB_START := $(LNKC_LIB_START)
+DLLC_RES_START := $(LNKC_RES_START)
 
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
