--- a/make/msw/win32/system.ini
+++ b/make/msw/win32/system.ini
@@ -21,6 +21,11 @@ DLL_SFX := dll
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)_WINDOWS $(CC_DEFINE)_WIN32 $(CC_DEFINE)WIN32
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)_WINDOWS $(CXX_DEFINE)_WIN32 $(CXX_DEFINE)WIN32
 
+MXCPP_LIBS_SYSTEM :=	\
+$(LNKC_LIB_PFX)kernel32$(LNKC_LIB_SFX) \
+$(LNKC_LIB_PFX)user32$(LNKC_LIB_SFX) \
+$(MXCPP_LIBS_COMPILER)
+
 
 # Include parent definitions.
 include ../../platform.ini
