--- a/make/msw/win32/watcom/makefile.ini
+++ b/make/msw/win32/watcom/makefile.ini
@@ -25,7 +25,7 @@ CC := wcc386
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -zq
+CFLAGS := -zq -bt=nt
 
 # Output name flag.
 CC_OUT := -fo
@@ -40,8 +40,10 @@ CC_INCLUDE := -i
 CFLAGS_DEBUG := -od -d2 -db -wx
 CFLAGS_RELEASE := -ox -d0 -w0
 CFLAGS_LIB := -bc
-CFLAGS_LIBMT := -bm
-CFLAGS_DLL := -bd
+CFLAGS_LIBMT := -bc -bm
+CFLAGS_DLL := -bm
+CFLAGS_DLL_DLL := -bd
+CFLAGS_DLL_EXE := -bc
 
 
 # C++ compiler settings.
@@ -69,29 +71,35 @@ CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
 CXXFLAGS_LIB := $(CFLAGS_LIB)
 CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
 CXXFLAGS_DLL := $(CFLAGS_DLL)
+CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
+CXXFLAGS_DLL_EXE := $(CFLAGS_DLL_EXE)
 
 
 # Resource compiler settings.
 
 # The compiler executable.
-#RC := rc
+RC := wrc
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-#RES_SFX := res
+RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := /n /r
+RCFLAGS := -q -r -bt=nt
 
 # Output name flag.
-RC_OUT := /fo
+RC_OUT := -fo
 
 # Macro definition flag.
-RC_DEFINE := /d
+RC_DEFINE := -D
 # Include directory flag.
-RC_INCLUDE := /i
+RC_INCLUDE := -i
+
+# Flags for different build configurations.
+RCFLAGS_DEBUG := -p
+RCFLAGS_RELEASE :=
 
 
 ##########################
@@ -101,7 +109,7 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS :=
+LDFLAGS := option quiet
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -116,15 +124,16 @@ LNKC := wlink
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) system 386 option quiet
+LNKC_FLAGS := $(LDFLAGS) system nt
 
 LNKC_OBJ := file 
+LNKC_RES := option resource=
 # Output name flag.
 LNKC_OUT := name 
 
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := debug watcom all
-LNKC_FLAGS_RELEASE :=
+LNKC_FLAGS_RELEASE := option eliminate
 
 LNKC_LIB_PFX := library 
 LNKC_LIB_SFX :=
@@ -150,9 +159,10 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS)
+DLLC_FLAGS := $(LDFLAGS) system nt_dll option implib
 
 DLLC_OBJ := $(LNKC_OBJ)
+DLLC_RES := $(LNKC_RES)
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
 
@@ -161,13 +171,13 @@ DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
 # Tool for creating the import library from the DLL.
-DLLC_IMPLIB := $(LIBC)
-DLLC_IMPLIB_FLAGS := $(LIBC_FLAGS)
-DLLC_IMPLIB_OUT := $(LIBC_OUT)
+#DLLC_IMPLIB := $(LIBC)
+#DLLC_IMPLIB_FLAGS := $(LIBC_FLAGS)
+#DLLC_IMPLIB_OUT := $(LIBC_OUT)
 
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = 
+MXCPP_CLEAN_MASK = *.err
 MXCPP_CLEAN_MASK_DEBUG = $(1)*.mbr
 MXCPP_CLEAN_MASK_TEST = 
 MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.mbr
