Improve Watcom and Borland support
Introduced the Exception::SetDebugInfo() method to improve portability.

--- a/make/msw/win32/bcc/makefile.ini
+++ b/make/msw/win32/bcc/makefile.ini
@@ -103,7 +103,7 @@ RC_INCLUDE := -i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /q /x
+LDFLAGS := /q /x /c /Gn /ap
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -115,15 +115,13 @@ LIB_SFX := lib
 # The linker executable.
 LNKC := ilink32
 
+# The linker build scheme.
+LNKC_SCHEME = $(1) $(2) $(4), $(3),, cw32i.lib import32.lib $(6),, $(5)
+
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) /Tpe /ap
-
-# Output name flag.
-LNKC_OUT := , 
-LNKC_LIB_START := ,, cw32i.lib 
-LNKC_RES_START := ,, 
+LNKC_FLAGS := $(LDFLAGS) /Tpe
 
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := /v /w
@@ -149,15 +147,14 @@ LIBC_OUT :=
 # The linker executable.
 DLLC := $(LNKC)
 
+# The linker build scheme.
+DLLC_SCHEME = $(LNKC_SCHEME)
+DLLC_SCHEME = $(1) $(2) c0d32w.obj $(4), $(3),, cw32.lib import32.lib $(6),, $(5)
+
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
 DLLC_FLAGS := $(LDFLAGS) /Tpd
-
-# Output name flag.
-DLLC_OUT := $(LNKC_OUT)
-DLLC_LIB_START := $(LNKC_LIB_START)
-DLLC_RES_START := $(LNKC_RES_START)
 
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
