--- a/make/global.ini
+++ b/make/global.ini
@@ -188,15 +188,27 @@ MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4),$(
 MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,,$(3),$(4))
 
 
+# Set the default linker build schemes.
+MXCPP_BUILD_LINK_SCHEME = $(1) $(2) $(3) $(4)$(if $(strip $(5)), $(5))$(if $(strip $(6)), $(6))
+
 # The standard command for linking.
 #
-# @param $(1) The library configuration (LIB or DLL).
+# @param $(1) The linker identifier.
 # @param $(2) The object files list.
 # @param $(3) The resource files list.
 # @param $(4) The libraries list.
 # @param $(5) The character configuration type.
 # @param $(6) The debuginfo configuration type.
-MXCPP_BUILD_LINK_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) )$(2) $($(1)_OUT)$$@ $($(1)_LIB_START)$(4) $($(1)_RES_START)$(3)
+MXCPP_BUILD_LINK_STANDARD = $(call $(if $(strip $($(1)_SCHEME)),$(1)_SCHEME,MXCPP_BUILD_LINK_SCHEME),\
+$($(1)),$(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) ),$($(1)_OUT)$$@,$(2),$(3),$(4))
+
+#$(if $(strip $($(1)_SCHEME)),$(call $(1)_SCHEME,$($(1)),,$(2),$(3),$(4)),\
+#$(error The build scheme is not defined for the $(1) linker!))
+
+
+#$($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) )$($(1)_OUT)$$@ $(2)$(if $(strip $(4)), $(4))$(if $(strip $(3)), $(3)))
+
+#$$(call DLLC_SCHEMA,$($(1)),,$(2),$(3),$(4))
 
 # The command for building libraries.
 #
