Makefiles - all Windows-32 compilers working

--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -71,24 +71,24 @@ CXXFLAGS_DLL := $(CFLAGS_DLL)
 # Resource compiler settings.
 
 # The compiler executable.
-#RC := rc
+RC := rcc
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-#RES_SFX := res
+RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := /n /r
+RCFLAGS := -r -32
 
 # Output name flag.
-RC_OUT := /fo
+RC_OUT := -o
 
 # Macro definition flag.
-RC_DEFINE := /d
+RC_DEFINE := -D
 # Include directory flag.
-RC_INCLUDE := /i
+RC_INCLUDE := -I
 
 
 ##########################
