--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -70,24 +70,24 @@ CXXFLAGS_DLL := $(CFLAGS_DLL)
 # Resource compiler settings.
 
 # The compiler executable.
-#RC := rc
+RC := windres
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-#RES_SFX := res
+RES_SFX := $(OBJ_SFX)
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := /n /r
+RCFLAGS :=
 
 # Output name flag.
-RC_OUT := /fo
+RC_OUT := -o
 
 # Macro definition flag.
-RC_DEFINE := /d
+RC_DEFINE := -D
 # Include directory flag.
-RC_INCLUDE := /i
+RC_INCLUDE := -I
 
 
 ##########################
@@ -118,6 +118,7 @@ LNKC := $(CXX)
 # overridden on the make command line)
 LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
 
+# LNKC_RES := -Wl,
 # Output name flag.
 LNKC_OUT := $(CXX_OUT)
 
@@ -148,8 +149,9 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -fPIC -shared
+DLLC_FLAGS := $(LNKC_FLAGS) -pie -shared
 
+DLLC_RES := $(LNKC_RES)
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
 
