--- a/make/msw/win32/bcc/makefile.ini
+++ b/make/msw/win32/bcc/makefile.ini
@@ -40,9 +40,12 @@ CC_INCLUDE := -I
 CFLAGS_UNICODE := -WU
 CFLAGS_DEBUG := -w -Od -v
 CFLAGS_RELEASE := -w- -O2
-CFLAGS_LIB := -WC
+# CFLAGS_LIB := -WC
+# For now, the multithreaded version is always build.
+# It is connected with linker configuration.
+CFLAGS_LIB := -WM
 CFLAGS_LIBMT := -WM
-CFLAGS_DLL := -WD
+CFLAGS_DLL := -WD -WM
 
 
 # C++ compiler settings.
@@ -103,7 +106,7 @@ RC_INCLUDE := -i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /q /x /c /Gn /ap
+LDFLAGS := /q /x /c /Gn
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -116,12 +119,12 @@ LIB_SFX := lib
 LNKC := ilink32
 
 # The linker build scheme.
-LNKC_SCHEME = $(1) $(2) $(4), $(3),, cw32i.lib import32.lib $(6),, $(5)
+LNKC_SCHEME = $(1) $(2) c0x32.obj $(4), $(3),, cw32mt.lib import32.lib $(6),, $(5)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) /Tpe
+LNKC_FLAGS := $(LDFLAGS) /ap /Tpe
 
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := /v /w
@@ -149,12 +152,12 @@ DLLC := $(LNKC)
 
 # The linker build scheme.
 DLLC_SCHEME = $(LNKC_SCHEME)
-DLLC_SCHEME = $(1) $(2) c0d32w.obj $(4), $(3),, cw32.lib import32.lib $(6),, $(5)
+DLLC_SCHEME = $(1) $(2) c0d32.obj $(4), $(3),, cw32mt.lib import32.lib $(6),, $(5)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LDFLAGS) /Tpd
+DLLC_FLAGS := $(LDFLAGS) /aa /Tpd
 
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
