Start DOS-16 support

--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -25,8 +25,7 @@ CC := dmc
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS :=
-# -mn
+CFLAGS := -mn
 
 # Output name flag.
 CC_OUT := -o
