Makefiles - DOS targets working

--- a/make/global.ini
+++ b/make/global.ini
@@ -50,14 +50,14 @@ $(MXCPP_TEST_LIST_PLATFORM)
 # Main source directory.
 MXCPP_SRC_ROOT := $(MXCPP_PROJECT_ROOT)src/
 
-# Main include directory.
-MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)inc
+# Main include directory - relative to the $(MXCPP_PROJECT_ROOT).
+MXCPP_INCLUDE_ROOT := inc
 
 # Main resource directory.
 MXCPP_RES_ROOT := $(MXCPP_SRC_ROOT)res/
 
-# Main test directory.
-MXCPP_TEST_ROOT := $(MXCPP_PROJECT_ROOT)tests/
+# Main test directory - relative to the $(MXCPP_PROJECT_ROOT).
+MXCPP_TEST_ROOT := tests/
 
 
 # Library main build types.
@@ -160,7 +160,7 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 # @param $(5) The library configuration type.
 # @param $(6) The character configuration type.
 # @param $(7) The debuginfo configuration type.
-MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $(3)
+MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$(CURDIR)/$$@) $(3)
 
 # The command for compiling ANSI-C sources.
 #
