--- a/make/msw/dos16/makefile
+++ b/make/msw/dos16/makefile
@@ -15,7 +15,7 @@ include ../../bakedefs.ini
 
 
 # The list of compilers, which will be checked for current system.
-MXCPP_BATCHMAKE_COMPILERS := dmc watcom
+MXCPP_BATCHMAKE_COMPILERS := gcc dmc watcom
 
 
 $(foreach target,$(MXCPP_BATCHMAKE_TARGETS),$(eval $(call MXCPP_BATCHMAKE_RULES_TARGET,$(target),$(MXCPP_BATCHMAKE_COMPILERS))))
