--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -21,6 +21,8 @@ PATH_SEP := $(strip \)
 
 # Create directory.
 MKDIR := mkdir
+# Change directory.
+CHDIR := chdir
 # Remove directory.
 RMDIR := rmdir
 # Remove file.
