--- a/make/msw/win32/msvc6/makefile.ini
+++ b/make/msw/win32/msvc6/makefile.ini
@@ -48,7 +48,7 @@ CFLAGS_DLL_RELEASE := -MD
 
 # Special options, which are expanded at-the-place.
 CFLAGS_VCDB_NAME := vc60
-CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
+CFLAGS_OPTIONS = -Fd$(CURDIR)\$$(@D)\$(CFLAGS_VCDB_NAME).pdb
 
 
 # C++ compiler settings.
