--- a/make/msw/win32/msvc8/makefile.ini
+++ b/make/msw/win32/msvc8/makefile.ini
@@ -49,7 +49,7 @@ CFLAGS_DLL_RELEASE := -MD
 
 # Special options, which are expanded at-the-place.
 CFLAGS_VCDB_NAME := vc80
-CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
+CFLAGS_OPTIONS = -Fd$(CURDIR)\$$(@D)\$(CFLAGS_VCDB_NAME).pdb
 
 
 # C++ compiler settings.
