Makefiles - improve object build rules

--- a/make/global.ini
+++ b/make/global.ini
@@ -160,7 +160,7 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 # @param $(5) The library configuration type.
 # @param $(6) The character configuration type.
 # @param $(7) The debuginfo configuration type.
-MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$(CURDIR)/$$@) $(3)
+MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$(MXCPP_MAKE_DIR)/$$@) $(3)
 
 # The command for compiling ANSI-C sources.
 #
