--- a/make/msw/dos16/gcc/makefile.ini
+++ b/make/msw/dos16/gcc/makefile.ini
@@ -21,6 +21,9 @@ OBJ_SFX := obj
 
 # The compiler executable.
 CC := gxx
+# For now, for the DJGPP is used the gxx even for ANSI-C compiling, to avoid
+# confusion between DJGPP and MinGW in batch processing mode for all MS
+# platforms.
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
@@ -108,6 +111,9 @@ LNKC_LIB_PFX := -l
 
 # The librarian executable.
 LIBC := ar
+# For now, usage of MinGW (Win32) AR is required, because DOS-16 programs have
+# commandline-too-long problems (which is the case, when all object file names
+# are used on the command line).
 
 # The librarian global flags.
 LIBC_FLAGS := r
