Start Windows-16 support

--- a/make/msw/dos16/system.ini
+++ b/make/msw/dos16/system.ini
@@ -29,9 +29,8 @@ include ../../platform.ini
 MXCPP_TARGET_TYPE_SHARE := LIB
 
 # Library build subtypes - only ANSI build type allowed.
-# (DOS does not have UNICODE)
+# (DOS does not support UNICODE)
 MXCPP_TARGET_SUBTYPE_CHARTYPE := ANSI
-MXCPP_TARGET_SUBTYPE_DBGINFO := DEBUG RELEASE
 
 
 # EOF #
