Start Windows-64 support

--- a/make/global.ini
+++ b/make/global.ini
@@ -103,11 +103,11 @@ MXCPP_COMPILERS_LIST := C CXX RC LNKC_ LIBC_ DLLC_
 
 # Flags of the ANSI-C compiler for different configurations.
 MXCPP_CFLAGS_LIB :=
-MXCPP_CFLAGS_LIBMT := $(CC_DEFINE)_MT
-MXCPP_CFLAGS_DLL := $(CC_DEFINE)_MT
+MXCPP_CFLAGS_LIBMT := $(CC_DEFINE)MT
+MXCPP_CFLAGS_DLL := $(CC_DEFINE)MT
 
-MXCPP_CFLAGS_DEBUG := $(CC_DEFINE)_DEBUG
-MXCPP_CFLAGS_RELEASE := $(CC_DEFINE)NDEBUG
+MXCPP_CFLAGS_DEBUG := $(CC_DEFINE)DEBUG
+MXCPP_CFLAGS_RELEASE :=
 MXCPP_CFLAGS_ANSI :=
 MXCPP_CFLAGS_UNICODE := $(CC_DEFINE)UNICODE
 
