--- a/make/msw/makefile
+++ b/make/msw/makefile
@@ -17,7 +17,7 @@ include ../bakedefs.ini
 
 
 # The list of systems, which will be checked for current platform.
-MXCPP_BATCHMAKE_SYSTEMS := dos16 dos32 win32
+MXCPP_BATCHMAKE_SYSTEMS := dos16 dos32 win16 win32 win64
 
 
 $(foreach target,$(MXCPP_BATCHMAKE_TARGETS),$(eval $(call MXCPP_BATCHMAKE_RULES_TARGET,$(target),$(MXCPP_BATCHMAKE_SYSTEMS))))
