--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -37,9 +37,12 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -g -o-all
+CFLAGS_DEBUG := -g -D -o-all
 CFLAGS_RELEASE := -w -o
-CFLAGS_DLL := -WD
+CFLAGS_LIB := -WA
+CFLAGS_LIBMT := -WA
+CFLAGS_DLL_DLL := -WD
+CFLAGS_DLL_EXE := -WA
 
 
 # C++ compiler settings.
@@ -64,7 +67,10 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
+CXXFLAGS_LIB := $(CFLAGS_LIB)
+CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
+CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
+CXXFLAGS_DLL_EXE := $(CFLAGS_DLL_EXE)
 
 
 # Resource compiler settings.
