--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -39,7 +39,8 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -Wall -g3
 CFLAGS_RELEASE := -w -o2
-CFLAGS_DLL := -fPIC
+CFLAGS_DLL :=
+# -fPIC
 
 
 # C++ compiler settings.
@@ -124,6 +125,7 @@ LNKC_OUT := $(CXX_OUT)
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
 LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
+LNKC_FLAGS_DLL :=
 
 LNKC_LIB_PFX := -l
 
@@ -156,6 +158,7 @@ DLLC_OUT := $(LNKC_OUT)
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
+DLLC_FLAGS_DLL := $(LNKC_FLAGS_DLL)
 
 
 # Addditional clean masks for 'clean...' targets.
