--- a/make/msw/win16/system.ini
+++ b/make/msw/win16/system.ini
@@ -18,8 +18,8 @@ $(MXCPP_RES_LIST_COMPILER)
 DLL_SFX := dll
 
 # Platform configuration flags.
-MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)_WINDOWS $(CC_DEFINE)_WIN16 $(CC_DEFINE)WIN16
-MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)_WINDOWS $(CXX_DEFINE)_WIN16 $(CXX_DEFINE)WIN16
+MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)WIN16
+MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)WIN16
 
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
@@ -35,7 +35,7 @@ include ../../platform.ini
 
 # Library main build types - only libs and DLLs allowed.
 # (Win16 does not support multithreading (?))
-MXCPP_TARGET_TYPE_SHARE := LIB DLL
+MXCPP_TARGET_TYPE_SHARE := LIB LIBMT DLL
 
 # Library build subtypes - only ANSI build type allowed.
 # (Win16 does not support UNICODE)
