--- a/make/msw/win32/system.ini
+++ b/make/msw/win32/system.ini
@@ -18,8 +18,8 @@ $(MXCPP_RES_LIST_COMPILER)
 DLL_SFX := dll
 
 # Platform configuration flags.
-MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)_WINDOWS $(CC_DEFINE)_WIN32 $(CC_DEFINE)WIN32
-MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)_WINDOWS $(CXX_DEFINE)_WIN32 $(CXX_DEFINE)WIN32
+MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)WIN32
+MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)WIN32
 
 MXCPP_LIBS_SYSTEM :=	\
 $(LNKC_LIB_PFX)kernel32$(LNKC_LIB_SFX) \
