--- a/make/msw/win64/msvc7/makefile.ini
+++ b/make/msw/win64/msvc7/makefile.ini
@@ -1,8 +1,10 @@
+# $Id$ #
+
 ##
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Open Watcom C++ compiler (definitions).
+#     - Microsoft Visual C++ 7.0 compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,41 +22,49 @@ OBJ_SFX := obj
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := wcc
+CC := cl
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -ml -zu -zq -bt=windows
+CFLAGS := -nologo -GF
 
 # Output name flag.
-CC_OUT := -fo
+CC_OUT := -Fo
 # Compile-only flag.
-CC_COMPILE_ONLY :=
+CC_COMPILE_ONLY := -c
 # Macro definition flag.
-CC_DEFINE := -d
+CC_DEFINE := -D
 # Include directory flag.
-CC_INCLUDE := -i
+CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -od -d2 -db -wx
-CFLAGS_RELEASE := -ox -d0 -w0
-CFLAGS_LIB := -bc
-CFLAGS_LIBMT := -bc
-CFLAGS_DLL :=
-CFLAGS_DLL_DLL := -bc -bd
-CFLAGS_DLL_EXE := -bc
+CFLAGS_DEBUG := -W4 -Od -Zi -MDd
+# -RTCsu
+# /RTC not working for now - some problems with libraries
+# (unresolved RTC_Shutdown etc.)
+CFLAGS_RELEASE := -W3 -O2 -MD
+#CFLAGS_LIB_DEBUG := -MTd
+#CFLAGS_LIB_RELEASE := -MT
+#CFLAGS_LIBMT_DEBUG := -MTd
+#CFLAGS_LIBMT_RELEASE := -TD
+#CFLAGS_DLL_DEBUG := -MDd
+#CFLAGS_DLL_RELEASE := -MD
+
+# Special options, which are expanded at-the-place.
+CFLAGS_VCDB_NAME := vc70
+CFLAGS_OPTIONS = -Fd$(CURDIR)\$$(@D)\$(CFLAGS_VCDB_NAME).pdb
 
 
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := wpp
+CXX := $(CC)
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -xs -xr
+CXXFLAGS := $(CFLAGS) -EHsc -GR
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -68,17 +78,21 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-CXXFLAGS_DLL_EXE := $(CFLAGS_DLL_EXE)
+CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
+CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
+CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
+CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
+CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
+CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
+
+# Special options, which are expanded at-the-place.
+CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
 
 
 # Resource compiler settings.
 
 # The compiler executable.
-RC := wrc
+RC := rc
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
@@ -87,19 +101,15 @@ RES_SFX := res
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
 # overridden on the make command line)
-RCFLAGS := -q -r -bt=windows
+RCFLAGS := /n /r
 
 # Output name flag.
-RC_OUT := -fo
+RC_OUT := /fo
 
 # Macro definition flag.
-RC_DEFINE := -D
+RC_DEFINE := /d
 # Include directory flag.
-RC_INCLUDE := -i
-
-# Flags for different build configurations.
-RCFLAGS_DEBUG := -p
-RCFLAGS_RELEASE :=
+RC_INCLUDE := /i
 
 
 ##########################
@@ -109,7 +119,7 @@ RCFLAGS_RELEASE :=
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := option quiet
+LDFLAGS := /nologo /machine:AMD64 /subsystem:console
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -119,36 +129,33 @@ LIB_SFX := lib
 # C++ linker settings.
 
 # The linker executable.
-LNKC := wlink
+LNKC := link
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS) system windows
+LNKC_FLAGS := $(LDFLAGS) user32.lib
 
-LNKC_OBJ := file 
-LNKC_RES := option resource=
 # Output name flag.
-LNKC_OUT := name 
+LNKC_OUT := /out:
 
 # Flags for different build configurations.
-#LNKC_FLAGS_DEBUG := debug watcom all
-LNKC_FLAGS_RELEASE := option eliminate
+LNKC_FLAGS_DEBUG := /debug /opt:noref
+LNKC_FLAGS_RELEASE := /opt:ref
 
-LNKC_LIB_PFX := library 
-LNKC_LIB_SFX :=
+LNKC_LIB_SFX := .$(LIB_SFX)
 
 
 # C++ librarian compiler settings.
 
 # The librarian executable.
-LIBC := wlib
+LIBC := $(LNKC)
 
 # The librarian global flags.
-LIBC_FLAGS := -q -b -n
+LIBC_FLAGS := /lib /nologo
 
 # Output name flag.
-LIBC_OUT :=
+LIBC_OUT := $(LNKC_OUT)
 
 
 # C++ dynamic library linker settings.
@@ -159,10 +166,8 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LDFLAGS) system windows_dll option implib
+DLLC_FLAGS := /dll $(LNKC_FLAGS)
 
-DLLC_OBJ := $(LNKC_OBJ)
-DLLC_RES := $(LNKC_RES)
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
 
@@ -170,21 +175,16 @@ DLLC_OUT := $(LNKC_OUT)
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
-# Tool for creating the import library from the DLL.
-#DLLC_IMPLIB := $(LIBC)
-#DLLC_IMPLIB_FLAGS := $(LIBC_FLAGS)
-#DLLC_IMPLIB_OUT := $(LIBC_OUT)
-
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.err
-MXCPP_CLEAN_MASK_DEBUG = $(1)*.mbr
-MXCPP_CLEAN_MASK_TEST = 
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.mbr
+MXCPP_CLEAN_MASK = $(1)*.sbr
+MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
+MXCPP_CLEAN_MASK_TEST = $(1)*.sbr $(1)*.manifest
+MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib)
-MXCPP_CLEANALL_MASK_DLL_DEBUG = 
+MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp) $(2).manifest
+MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
 
 
 # Include parent definitions.
