Modify the system definition

--- a/make/global.ini
+++ b/make/global.ini
@@ -18,7 +18,7 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 # Source files list.
 MXCPP_SRC_LIST =	\
-dllmain.cpp	\
+libmain.cpp	\
 debug.cpp	\
 Memory.cpp	\
 new.cpp	\
@@ -58,6 +58,14 @@ MXCPP_RES_ROOT := $(MXCPP_SRC_ROOT)res/
 
 # Main test directory - relative to the $(MXCPP_PROJECT_ROOT).
 MXCPP_TEST_ROOT := tests/
+
+
+# Directory of dependencies.
+# (relative to make directory)
+MXCPP_DEP_DIR := /dep
+
+# Suffix of dependencies.
+MXCPP_DEP_SFX := d
 
 
 # Library main build types.
