--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -12,6 +12,10 @@
 MXCPP_PROJECT_ROOT := ../../../../
 
 
+# Platform-dependent source files list.
+MXCPP_SRC_LIST_PLATFORM :=	\
+$(MXCPP_SRC_LIST_SYSTEM)
+
 # Platform-dependent resource files list.
 MXCPP_RES_LIST_PLATFORM =	\
 $(MXCPP_RES_LIST_SYSTEM)
