--- a/make/msw/win16/system.ini
+++ b/make/msw/win16/system.ini
@@ -8,6 +8,10 @@
 #
 
 
+# System-dependent source files list.
+MXCPP_SRC_LIST_SYSTEM =	\
+$(MXCPP_SRC_LIST_COMPILER)
+
 # System-dependent resource files list.
 MXCPP_RES_LIST_SYSTEM =	\
 $(MXCPP_CONFIG_SUFFIX)CppFW.rc	\
@@ -17,7 +21,7 @@ $(MXCPP_RES_LIST_COMPILER)
 # Suffix of shared (dynamic loaded) libraries.
 DLL_SFX := dll
 
-# Platform configuration flags.
+# System configuration flags.
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)WIN16
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)WIN16
 
