--- a/make/msw/dos16/system.ini
+++ b/make/msw/dos16/system.ini
@@ -8,7 +8,12 @@
 #
 
 
-# Platform configuration flags.
+# System-dependent source files list.
+MXCPP_SRC_LIST_SYSTEM =	\
+$(MXCPP_SRC_LIST_COMPILER)
+
+
+# System configuration flags.
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)DOS
 MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)DOS
 
